# mms

./: Cargo.toml  README.md
.codex/: AGENTS.md
.serena/: project.yml
src/: cli.rs  commands.rs  error.rs  lib.rs  main.rs
src/config/: global.rs  local.rs  master.rs  master_data.json  mod.rs  model.rs  paths.rs
src/integration/: codex.rs  gemini.rs  mod.rs
tests/: init.rs  manage.rs  sync.rs
tests/common/: mod.rs
